<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MyFirstTriangleAndroid!</string>
    <string name="app_name">ARchitecture</string>
    <!-- Dashboard -->
    <string name="btn_semper">Gottfried Semper</string>
    <string name="btn_geschichte">Geschichte</string>
    <string name="btn_alte">Alte Synagoge</string>
    <string name="btn_neue">Neue Synagoge</string>
    <string name="btn_einstellungen">Einstellungen</string>
    <string name="btn_quellen">Quellen</string>
    <string name="btn_3d">Synagoge in 3D</string>
    <!-- Gottfried Semper -->
    <string name="semper_person_h">Gottfried Semper</string>
    <string name="semper_person_desc">Gottfried Semper kurz vor seinem Tod</string>
    <string name="semper_person_text">Gottfried Sempe wurde am 29. November 1803 und Hamburg geboren und verstarb am 15. Mai 1887 in Rom. Gottfried Semper war als Architekt im deutschsprachigen Raum tätig, unter Anderen in Dresden, Zürich, Wien, Winterthur und Bautzen. </string>
    <string name="semper_zeit_h1">Zeit in Dresden I</string>
    <string name="semper_zeit_h2">Zeit in Dresden II</string>
    <string name="semper_zeit_text1">Am 17. Mai 1834 erhielt Semper den Ruf als Professor der Architektur an die Königlichen Akademie der bildenden Künste zu Dresden und wurde am 30. September in dieses Amt eingeführt. Der erste Entwurf und Bau eines Hoftheaters (der heutigen Semperoper) eröffnete und ist 1869 vollständig abgebrannt. Ebenso der zweite Entwurf stammt von Semper. Die Bauleitung übernahm allerdings sein Sohn Manfred Semper. Am 13. Februar 1945 wurde auch dieser bei den Luftangriffen zerstört. Der heutige dritte Bau entstand erst in der späten Nachkriegszeit und ist dem zweiten Bau nachempfunden.
Semper wirkte wesentlich an Zwinger- und Umgebungsbauten. Von ihm entstand die Gemäldegalerie Alte Meister im Nordosten.</string>
    <string name="semper_zeit_text2">Neben diesen großen Aufträgen entstanden auch andere Bauten, die untrennbar mit seinem Namen verbunden sind, etwa das Maternihospital, die Alte Synagoge, das Stadtpalais Oppenheim oder die für den Bankier Martin Wilhelm Oppenheim errichtete Villa Rosa. Letztere gilt als Prototyp deutscher Villenarchitektur.
Am 9. Mai 1849 floh Semper und sein Freund Richard Wagner aus Dresden wegen der Teilnahme am Dresdner Maiaufstand. Er kehrte nie nach Dresden zurück.</string>
    <string name="semper_zeit_desc1">Das erste Opernhaus Sempers</string>
    <string name="semper_zeit_desc2">Sempergalerie am Theaterplatz, um 1900</string>
    <!-- Geschichte -->
    <string name="geschichte_h1">Zeit vor dem Bau</string>
    <string name="geschichte_t1">Die erste historisch nachgewiesene Erwähnung einer Synagoge stammt aus dem Jahre 1265. Schon lange vor dem Nationalsozialismus führten die Juden ein schweres Leben im Raum Dresden. Gebetsräum sind lange Zeit verboten. Auch zu Verfolgungen und Hinrichtungen von Juden kam es. Erst im Jahre 1772 wurden wieder Beträume zugelassen. Eine offizielle Synagoge wurde  im Jahre 1837 gewilligt. </string>
    <string name="geschichte_h2">Bau der Sempersynagoge</string>
    <string name="geschichte_t2">Die alte Synagoge Dresdens – auch Sempersynagoge genannt - entwarf der durch weitere Dresdner Bauten bekannte Architekt Gottfried Semper. Den Auftrag zum Bau erhielt er 1838 und am 21. Juni im selben Jahr erfolgte bereits die Grundsteinlegung. Knapp zwei Jahre später, am 8. Mai 1840 wurde die Synagoge eingeweiht und somit wieder ein Zentrum jüdischen Lebens in der Elbestadt.</string>
    <string name="geschichte_h3">Zerstörung</string>
    <string name="geschichte_t3">Auch die Sempersynagoge musste in der Reichspogromnacht vom 9. auf den 10. November 1938 dem zerstörerischen Wüten Dresdner SA-Mannschaften weichen und brannte ungehindert nieder, da es der Feuerwehr nur erlaubt wurde umliegende Gebäude zu schützen. Steine der Synagoge wurden später im Straßenbau verwendet und die Kosten der Beseitigung hatte die jüdische Gemeinde selbst zu tragen. Einem mutigen Feuerwehrmann ist es zu verdanken, dass einer der zwei Davidsternen, welche das Dach des Gebäudes schmückten, noch heute zu betrachten ist. Der Dresdner versteckte den Stern heimlich und übergab ihm nach dem Kriegsende der Gemeinde zurück. </string>
    <string name="geschichte_h4">Nachkriegszeit</string>
    <string name="geschichte_t4">Zu jener Zeit diente die ehemalige Totenhalle am Jüdischen Friedhof FIedlerstraße als Behelfssynagoge und trug später den erwähnten Davidstern. 2001 wurde die Neue Synagoge Dresden fertiggestellt. Sie steht an dem ehemaligen Platz der alten Synagoge und im Boden vor dem Gemeindezentrum der Synagoge sind die Grundrisse der Sempersynagoge als Metallstreifen sichtbar. Nun sitzt über den Eingang zum Gebetshaus der erhaltene Davidstern. In unmittelbarer Nähe zur Synagoge wurde ein Mahnmal errichtet, das an die tragische Zeit und Zerstörung von 1938 erinnert. </string>
    <string name="geschichte_bu1">Alte Synagoge Dresden 1860</string>
    <string name="geschichte_bu2">Synagoge Fiedlerstraße 3</string>
    <string name="geschichte_bu3">Abnahme des Davidstern von einem der beiden Türmen</string>
    <string name="geschichte_bu4">Gedenkstein an die 1938 zerstörte Alte Synagoge</string>

    <!-- Neue Synagoge -->
    <string name="neue_h1">Allgemein</string>
    <string name="neue_t1">Dresdens neue Synagoge wurde im Jahre 2001 fertiggestellt. Vier Jahre zuvor wurde das Projekt als Architekturwettbewerb ausgeschrieben. Den Zuschlag erhielt der Entwurf von den Architekten Wandel, Hoefer und Lorch + Hirsch. Damit wurde nicht der Wettbewerbsgewinner, sondern der Drittplatzierte von der jüdischen Gemeinde favorisiert. Die Neue Synagoge steht nun am Hasenberg 1 in Dresden und wurde 2002 als Europäisches Gebäude des Jahres gekürt. </string>
    <string name="neue_h2">Gemeindezentrum</string>
    <string name="neue_t2">Das Gemeindezentrum im Süden ist etwas niedriger als die Synagoge. Es nimmt 1400 m² auf drei Geschossen ein charakterisiert sich als Funktionalbau mit Foyer. Zum Hof hin befindet sich eine große Glasfront. Zu den Straßenseiten wurden 39 kleine Fenster in das Mauerwerk integriert. Das Zentrum beherbergt eine Bibliothek, Verwaltungsapparate, Schulungsräume, Sitzungszimmer einen großen Gemeindesaal, der auch für öffentliche Veranstaltungen und Konzerte genutzt wird.</string>
    <string name="neue_h3">Neue Synagoge</string>
    <string name="neue_t3">Die neue Synagoge wurde aus gefärbtem Beton errichtet und lehnt sich damit an die Sandsteinarchitektur der Dresdner Altstadt an. Die Höhe beträgt 24 Meter. Der Baukörper besteht aus 23 Stufen und jede Stufe ist gegenüber der unteren leicht verdreht. Diese schrittweise Drehung bewirkt, dass sich die unterste Schicht am Grundstück orientiert und die oberste sich genau nach Osten ausrichtet, wie es für jüdische Gotteshäuser gefordert wird. Zugleich erfährt das Gebäude Dynamik und relativiert damit die Monumentalität des Baukörpers.</string>
    <string name="neue_h4">Neue Synagoge I</string>
    <string name="neue_t4">Die Torarollen, das Vorbeterpult (Birna), die Ampel und Orgel sind im Osten platziert. Die Synagoge verdeutlicht das Begriffspaar Tempel und Zelt als architektonische Grunderfahrung des Judentums. Das massive Mauerwerk und eine von der Decke hängendes Metallgewebe ergeben ein Raum in Raum Konzept und symbolisieren Tempel und Zelt.</string>
    <string name="neue_bu1">Inschrift am Zugang zur Neuen Synagoge</string>
    <string name="neue_bu2">Gemeindezentrum an der Südseite</string>
    <string name="neue_bu3">Hof und Blick auf die Synagoge</string>
    <string name="neue_bu4">Tempel- und Zeltanalogie im Inneren</string>

    <!-- Alte Synagoge -->
    <string name="alte_h1">Alte Synagoge</string>
    <string name="alte_t1">Der auch Sempersynagoge genannter Bau von Gottfried Semper wurde 1838 erbaut und 100 Jahre später in der Reichspogromnacht zerstört. 2001 wurde auf dem Grundstück der alten Synagoge die Neue Synagoge Dresdens erbaut. Die Grundrisse der alten Synagoge sind im Synagogenhof als Metallstreifen eingearbeitet.</string>
    <string name="alte_h2">Stil</string>
    <string name="alte_t2">Der von Semper entworfene Bau zeigt eine „kubische Geschlossenheit des Bauens in Weiterentwicklung der französischen Revolutionsarchitektur“ und wurde mit „romanischen Grundformen und orientalischen Kuppeln“ verbunden. Die romanischen und orientalischen Elemente nutzt Semper im Rahmen einer „byzantinisch-romantischen Stilisierung“, um auf die „morgenländische Herkunft“ der jüdischen Gemeinde hinzuweisen. Das äußere romanische Erscheinungsbild stand jedoch in einem eklatanten Kontrast zum inneren orientalischen Erscheinungsbild. Sie Synagoge stellt das „früheste Beispiel für einen gänzlich im orientalischen Stil gestalteten Innenraum“ dar.</string>
    <string name="alte_h3">Äußeres</string>
    <string name="alte_t3">Der Primäre Zentralbau weist einen quadratischen Grundriss von 20 mal 20 Metern auf. Über dem Mittelraum des Zentralbaus erhob sich ein oktogonaler Tambour mit einem flachen Zeltdach. Eine an der Westseite befindliche leicht eingezogene Vorhalle diente als Eingang und war von zwei achteckigen Turmstümpfen mit flachgewölbten Kuppeln flankiert. Die Rundbogenportale und -fenster waren historisierend im Stil der Neoromanik gestaltet worden. Ebenfalls neoromanisch war ein Rundbogenfries im Gesims. Der Putzbau hatte Tür- und Fenstereinfassungen aus Sandstein, wobei die Kuppelkonstruktion aus Holz war. Im Tympanon über dem äußeren Hoftor stand auf Hebräisch: „Mein Haus werde genannt ein Haus der Andacht allen Völkern“.</string>
    <string name="alte_h4">Inneres</string>
    <string name="alte_t4">Der auf 20 mal 20 Metern quadratisch gestaltete Innenraum war auf dem Grundriss eines griechischen Kreuzes errichtet worden. Vier Pfeiler stützten den hohen Tambour mit Kuppel, wobei diese an die vier Pfeiler des Stiftszeltes erinnern sollten. Im östlichen Querarm befand sich der Toraschrein (Aron ha-Qodesch), der aus Eichenholz bestand und mit Niellos und Intarsien verziert worden war. Vor dem Toraschrein war ein Podium mit dem Vorbeterpult (Bima). Der Schrein wurde zu beiden Seiten von zwei siebenarmigen Leuchtern (Menora) flankiert. Alle Querarme des Quadrats (bis auf das mit dem Toraschrein), waren gleichermaßen mit Rundbogen, Pfeilern und den gleichen zwei Säulen in drei Achsen gegliedert worden, wo die zweigeschossigen Emporen untergebracht waren. Die Kapitelle werden einerseits als maurisch-byzantinisch angesehen. Andererseits soll das Kapitellstück die Alhambra zu Granada zitieren. Das Interieur hatte eine „reiche, buntfarbige Dekoration maurischer Motive.</string>
    <string name="alte_bu1">Foto der alte Sempersynagoge</string>
    <string name="alte_bu2">Querschnitt der alten Synagoge</string>
    <string name="alte_bu3">Grundriss der Alten Synagoge</string>
    <string name="alte_bu4">das Innere der alten Synagoge</string>

</resources>