<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/activity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout style="@style/headline_container" >

            <TextView
                style="@style/text_headline"
                android:text="@string/semper_person_h" />

            <Button
                android:id="@+id/play_semper_person"
                style="@style/button_media"
                android:background="@drawable/ic_play" />
        </LinearLayout>

        <TextView
            style="@style/text_article"
            android:text="@string/semper_person_text" />

        <ImageView
            style="@style/text_image"
            android:src="@drawable/semper" />

        <TextView
            style="@style/text_desc"
            android:text="@string/semper_person_desc" />

        <LinearLayout style="@style/headline_container" >

            <TextView
                style="@style/text_headline"
                android:text="@string/semper_zeit_h1" />

            <Button
                android:id="@+id/play_semper_zeit1"
                style="@style/button_media"
                android:background="@drawable/ic_play" />
        </LinearLayout>

        <TextView
            style="@style/text_article"
            android:text="@string/semper_zeit_text1" />

        <ImageView
            style="@style/text_image"
            android:src="@drawable/opernhaus" />

        <TextView
            style="@style/text_desc"
            android:text="@string/semper_zeit_desc1" />

        <LinearLayout style="@style/headline_container" >

            <TextView
                style="@style/text_headline"
                android:text="@string/semper_zeit_h2" />

            <Button
                android:id="@+id/play_semper_zeit2"
                style="@style/button_media"
                android:background="@drawable/ic_play" />
        </LinearLayout>

        <TextView
            style="@style/text_article"
            android:text="@string/semper_zeit_text2" />

        <ImageView
            style="@style/text_image"
            android:src="@drawable/sempergalerie" />

        <TextView
            style="@style/text_desc"
            android:text="@string/semper_zeit_desc2" />
    </LinearLayout>

</ScrollView>