<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_btn_semper"
            style="@style/HomeButton"
            android:drawableTop="@drawable/icon_semper"
            android:onClick="onClickSemper"
            android:text="@string/btn_semper" />

        <Button
            android:id="@+id/home_btn_geschichte"
            style="@style/HomeButton"
            android:drawableTop="@drawable/icon_geschichte"
            android:onClick="onClickGeschichte"
            android:text="@string/btn_geschichte" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_btn_alte"
            style="@style/HomeButton"
            android:drawableTop="@drawable/icon_alte"
            android:onClick="onClickAlte"
            android:text="@string/btn_alte" />

        <Button
            android:id="@+id/home_btn_neue"
            style="@style/HomeButton"
            android:drawableTop="@drawable/icon_neue"
            android:onClick="onClickNeue"
            android:text="@string/btn_neue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_btn_einstellungen"
            style="@style/HomeButton"
            android:drawableTop="@drawable/icon_3d"
            android:onClick="onClick3D"
            android:text="@string/btn_3d" />

        <Button
            android:id="@+id/home_btn_quellen"
            style="@style/HomeButton"
            android:drawableTop="@drawable/icon_quellen"
            android:onClick="onClickQuellen"
            android:text="@string/btn_quellen" >
        </Button>
    </LinearLayout>

</LinearLayout>